--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "AltairHL_emulator/Disks"]
 	path = AltairHL_emulator/Disks
 	url = https://github.com/AzureSphereCloudEnabledAltair8800/AzureSphereAltair8800.disks.git
+[submodule "azure-sphere-samples"]
+	path = azure-sphere-samples
+	url = https://github.com/Azure/azure-sphere-samples.git
