--- a/AltairRT_sd_card_server/launch.vs.json
+++ b/AltairRT_sd_card_server/launch.vs.json
@@ -1,10 +1,10 @@
-﻿{
+{
   "version": "0.2.1",
   "defaults": {},
   "configurations": [
     {
       "type": "azurespheredbg",
-      "name": "GDB Debugger (HLCore)",
+      "name": "GDB Debugger (RTCore)",
       "project": "CMakeLists.txt",
       "inheritEnvironments": [
         "AzureSphere"
@@ -13,13 +13,8 @@
       "workingDirectory": "${workspaceRoot}",
       "applicationPath": "${debugInfo.target}",
       "imagePath": "${debugInfo.targetImage}",
-      "targetCore": "HLCore",
-      "targetApiSet": "${env.AzureSphereTargetApiSet}",
-      "partnerComponents": [
-        "2e319eae-7be5-4a0c-ba47-9353aa6ca96a",
-        "9b684af8-21b9-42aa-91e4-621d5428e497",
-        "005180bc-402f-4cb3-a662-72937dbcde47"
-      ]
+      "targetCore": "RTCore",
+      "partnerComponents": [ "25025d2c-66da-4448-bae1-ac26fcdd3627", "ac8d863a-4424-11eb-b378-0242ac130002", "8E24FC73-A329-4D99-9B37-2EE54DC795E7" ]
     }
   ]
 }
