--- a/AltairHL_sd_card_format_drive_b/launch.vs.json
+++ b/AltairHL_sd_card_format_drive_b/launch.vs.json
@@ -15,11 +15,7 @@
       "imagePath": "${debugInfo.targetImage}",
       "targetCore": "HLCore",
       "targetApiSet": "${env.AzureSphereTargetApiSet}",
-      "partnerComponents": [
-        "2e319eae-7be5-4a0c-ba47-9353aa6ca96a",
-        "9b684af8-21b9-42aa-91e4-621d5428e497",
-        "005180bc-402f-4cb3-a662-72937dbcde47"
-      ]
+      "partnerComponents": [ "005180bc-402f-4cb3-a662-72937dbcde47" ]
     }
   ]
 }
