--- a/.gitmodules
+++ b/.gitmodules
@@ -19,9 +19,18 @@
 [submodule "azure-sphere-samples"]
 	path = azure-sphere-samples
 	url = https://github.com/Azure/azure-sphere-samples.git
-[submodule "AltairHL_sd_card_format/AzureSphereDevX"]
-	path = AltairHL_sd_card_format/AzureSphereDevX
-	url = https://github.com/gloveboxes/AzureSphereDevX.git
 [submodule "AltairRT_sd_card_server/lib"]
 	path = AltairRT_sd_card_server/lib
 	url = https://github.com/CodethinkLabs/mt3620-m4-drivers
+[submodule "AltairHL_sd_card_format_drive_a/AzureSphereDevX"]
+	path = AltairHL_sd_card_format_drive_a/AzureSphereDevX
+	url = https://github.com/gloveboxes/AzureSphereDevX.git
+[submodule "AltairHL_sd_card_format_drive_b/AzureSphereDevX"]
+	path = AltairHL_sd_card_format_drive_b/AzureSphereDevX
+	url = https://github.com/gloveboxes/AzureSphereDevX.git
+[submodule "AltairHL_sd_card_format_drive_a/Disks"]
+	path = AltairHL_sd_card_format_drive_a/Disks
+	url = https://github.com/AzureSphereCloudEnabledAltair8800/AzureSphereAltair8800.disks.git
+[submodule "AltairHL_sd_card_format_drive_b/Disks"]
+	path = AltairHL_sd_card_format_drive_b/Disks
+	url = https://github.com/AzureSphereCloudEnabledAltair8800/AzureSphereAltair8800.disks.git
