--- a/AltairRT_sd_card_server/.vscode/launch.json
+++ b/AltairRT_sd_card_server/.vscode/launch.json
@@ -14,7 +14,11 @@
             "environment": [],
             "externalConsole": true,
             "targetCore": "RTCore",
-            "partnerComponents": [ "25025d2c-66da-4448-bae1-ac26fcdd3627" ],
+            "partnerComponents": [
+                "25025d2c-66da-4448-bae1-ac26fcdd3627",
+                "ac8d863a-4424-11eb-b378-0242ac130002",
+                "8E24FC73-A329-4D99-9B37-2EE54DC795E7"
+            ],
             "MIMode": "gdb",
             "setupCommands": [
                 {
