--- a/AltairHL_sd_card_format_drive_a/.vscode/launch.json
+++ b/AltairHL_sd_card_format_drive_a/.vscode/launch.json
@@ -13,7 +13,11 @@
             "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": true,
-            "partnerComponents": ["09F0654C-674D-4C93-A4EA-DA60ACD4FD32", "5DFA4F92-B474-44EC-BF99-DDBC5B91F795"],
+            "partnerComponents": [
+                "09F0654C-674D-4C93-A4EA-DA60ACD4FD32",
+                "5DFA4F92-B474-44EC-BF99-DDBC5B91F795",
+                "005180bc-402f-4cb3-a662-72937dbcde47"
+            ],
             "MIMode": "gdb",
             "setupCommands": [
                 {
