--- a/AltairRT_disk_cache_server/.vscode/launch.json
+++ b/AltairRT_disk_cache_server/.vscode/launch.json
@@ -14,7 +14,11 @@
             "environment": [],
             "externalConsole": true,
             "targetCore": "RTCore",
-            "partnerComponents": ["ac8d863a-4424-11eb-b378-0242ac130002", "2e319eae-7be5-4a0c-ba47-9353aa6ca96a"],
+            "partnerComponents": [
+                "ac8d863a-4424-11eb-b378-0242ac130002",
+                "2e319eae-7be5-4a0c-ba47-9353aa6ca96a",
+                "005180bc-402f-4cb3-a662-72937dbcde47"
+            ],
             "MIMode": "gdb",
             "setupCommands": [
                 {
