--- a/AltairRT_sd_card_server/app_manifest.json
+++ b/AltairRT_sd_card_server/app_manifest.json
@@ -4,8 +4,14 @@
   "ComponentId": "005180bc-402f-4cb3-a662-72937dbcde47",
   "EntryPoint": "/bin/app",
   "Capabilities": {
-    "AllowedApplicationConnections": [ "25025d2c-66da-4448-bae1-ac26fcdd3627", "ac8d863a-4424-11eb-b378-0242ac130002", "8E24FC73-A329-4D99-9B37-2EE54DC795E7" ],
-    "SpiMaster": [ "ISU0" ]
+    "AllowedApplicationConnections": [
+      "25025d2c-66da-4448-bae1-ac26fcdd3627",
+      "ac8d863a-4424-11eb-b378-0242ac130002",
+      "8E24FC73-A329-4D99-9B37-2EE54DC795E7"
+    ],
+    "SpiMaster": [
+      "ISU0"
+    ]
   },
   "ApplicationType": "RealTimeCapable"
 }
