initial support for onboard sensors for emulator

--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "AltairHL_sd_card_format_drive_b/Disks"]
 	path = AltairHL_sd_card_format_drive_b/Disks
 	url = https://github.com/AzureSphereCloudEnabledAltair8800/AzureSphereAltair8800.disks.git
+[submodule "AltairHL_emulator/Drivers"]
+	path = AltairHL_emulator/Drivers
+	url = https://github.com/gloveboxes/AzureSphereDrivers.git
