--- a/AltairHL_emulator/.vscode/settings.json
+++ b/AltairHL_emulator/.vscode/settings.json
@@ -7,5 +7,11 @@
         "AZURE_SPHERE_TARGET_API_SET": "10"
     },
     "cmake.configureOnOpen": true,
-    "C_Cpp.default.configurationProvider": "vector-of-bool.cmake-tools"
+    "C_Cpp.default.configurationProvider": "vector-of-bool.cmake-tools",
+    "AzureSphere.partnerApplications": {
+        "ac8d863a-4424-11eb-b378-0242ac130002": "c:\\Data\\Altair_8800\\AzureSphereAltair8800\\AltairHL_emulator\\app_manifest.json",
+        "2e319eae-7be5-4a0c-ba47-9353aa6ca96a": "",
+        "9b684af8-21b9-42aa-91e4-621d5428e497": "",
+        "005180bc-402f-4cb3-a662-72937dbcde47": ""
+    }
 }
