--- a/AltairHL_emulator/CMakeLists.txt
+++ b/AltairHL_emulator/CMakeLists.txt
@@ -25,6 +25,7 @@ set(ALTAIR_FRONT_PANEL_NONE TRUE "Altair on Azure Sphere with no panel.")
 #
 # The MikroE microSD Click only works with the Avnet Rev 2 when in Socket 1.
 # The MikroE microSD Click works with the Mikroe Altair 8800 Retro Click in Socket 2
+# Uncomment the "set(MICRO_SD_CLICK" line below to enable the MikroE microSD Click
 #
 # set(MICRO_SD_CLICK TRUE "MikroE microSD Click for CP/M read/write to SD Card")
 #
