--- a/AltairHL_sd_card_format_drive_b/app_manifest.json
+++ b/AltairHL_sd_card_format_drive_b/app_manifest.json
@@ -1,6 +1,6 @@
 {
   "SchemaVersion": 1,
-  "Name": "AzureSphereIoTCentral",
+  "Name": "AltairHL_sd_card_format_b",
   "ComponentId": "ac8d863a-4424-11eb-b378-0242ac130002",
   "EntryPoint": "/bin/app",
   "CmdArgs": [],
