--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "AltairHL_emulator/Drivers"]
 	path = AltairHL_emulator/Drivers
 	url = https://github.com/gloveboxes/AzureSphereDrivers.git
+[submodule "AltairRT_sd_card_service/lib"]
+	path = AltairRT_sd_card_service/lib
+	url = https://github.com/CodethinkLabs/mt3620-m4-drivers
