updates to match docs

--- a/AltairHL_emulator/CMakeLists.txt
+++ b/AltairHL_emulator/CMakeLists.txt
@@ -17,15 +17,15 @@ set(AVNET TRUE "AVNET Azure Sphere Starter Kit Revision 1 ")
 # SELECT FRONT PANEL CONFIG #######################################################################################
 #
 set(ALTAIR_FRONT_PANEL_NONE TRUE "Altair on Azure Sphere with no panel.")
-# set(ALTAIR_FRONT_PANEL_RETRO_CLICK TRUE "Avnet with the MikroE Altair 8800 Retro Click")
+# set(ALTAIR_FRONT_PANEL_RETRO_CLICK TRUE "Avnet with the MikroE 8800 Retro Click")
 # set(ALTAIR_FRONT_PANEL_KIT TRUE "Altair front panel board")
 #
 ###################################################################################################################
 
 # ENABLE SD CARD ##################################################################################################
 #
-# The MikroE microSD Click only works with the Avnet Rev 2 when in Socket 1.
-# The MikroE microSD Click works with the Mikroe Altair 8800 Retro Click in Socket 2
+# The MikroE microSD Click works with the Avnet Azure Sphere Starter Kit Rev 1 and Rev 2 when in Socket 1.
+# The MikroE microSD Click works with the Mikroe 8800 Retro Click in Socket 2
 # Uncomment the "set(MICRO_SD_CLICK" line below to enable the MikroE microSD Click
 #
 # set(MICRO_SD_CLICK TRUE "MikroE microSD Click for CP/M read/write to SD Card")
