--- a/AltairHL_emulator/app_manifest.json
+++ b/AltairHL_emulator/app_manifest.json
@@ -5,6 +5,8 @@
   "EntryPoint": "/bin/app",
   "CmdArgs": [ "--ScopeID", "YOUR_WITH YOUR_IOT_CENTRAL_ID_SCOPE" ],
   "Capabilities": {
+    //  Uncomment the following line to enable SPI on ISU1 for the Altair Front Panel
+    //  "SpiMaster": [ "$MT3620_ISU1_SPI" ],
     "MutableStorage": { "SizeKB": 8 },
     "Gpio": [
       "$AZURE_CONNECTED_LED",
