--- a/AltairHL_sd_card_format_drive_b/CMakeLists.txt
+++ b/AltairHL_sd_card_format_drive_b/CMakeLists.txt
@@ -9,8 +9,8 @@
 
 # If you are NOT using the AVNET Revision 1 board be sure to comment out the AVNET board
 
-# set(AVNET TRUE "AVNET Azure Sphere Starter Kit Revision 1 ")    
-set(AVNET_REV_2 TRUE "AVNET Azure Sphere Starter Kit Revision 2 ")             
+set(AVNET TRUE "AVNET Azure Sphere Starter Kit Revision 1 ")    
+# set(AVNET_REV_2 TRUE "AVNET Azure Sphere Starter Kit Revision 2 ")             
 # set(SEEED_STUDIO_RDB TRUE "Seeed Studio Azure Sphere MT3620 Development Kit (aka Reference Design Board or rdb)")
 # set(SEEED_STUDIO_MINI TRUE "Seeed Studio Azure Sphere MT3620 Mini Dev Board")
 
