--- a/AltairHL_emulator/CMakeLists.txt
+++ b/AltairHL_emulator/CMakeLists.txt
@@ -4,9 +4,22 @@
 cmake_minimum_required (VERSION 3.10)
 project (AltairHL_emulator C)
 
-# Azure Sphere TOOLS_REVISION and TARGET_API_SET set in cmake/azsphere_config.cmake
-include(cmake/azsphere_config.cmake)
+get_filename_component(PARENT_DIR ${PROJECT_SOURCE_DIR} DIRECTORY)
+
 include(cmake/altair_config.cmake)
+
+if (EXISTS "${PARENT_DIR}/tools/cmake/azsphere_config.cmake")
+    include(../tools/cmake/azsphere_config.cmake)
+    auto_generate_azsphere_config()
+else()
+
+    # For information on setting tools revision and target api set see 
+    # https://docs.microsoft.com/en-us/azure-sphere/app-development/using-cmake-functions
+
+    azsphere_configure_tools(TOOLS_REVISION "21.07")
+    azsphere_configure_api(TARGET_API_SET "10")
+
+endif()
 
 # MQTT BROKER CONFIG ##############################################################################################
 #
