--- a/AltairHL_emulator/CMakeLists.txt
+++ b/AltairHL_emulator/CMakeLists.txt
@@ -37,7 +37,7 @@ add_compile_definitions(PRINTF=Log_Debug)
 #
 add_compile_definitions(WOLFMQTT_MULTITHREAD)
 add_compile_definitions(WOLFMQTT_DISCONNECT_CB)
-# add_compile_definitions(WOLFMQTT_NONBLOCK)
+add_compile_definitions(WOLFMQTT_NONBLOCK)
 add_compile_definitions(WOLFMQTT_NO_STDIO)
 add_compile_definitions(WOLFSSL_USER_SETTINGS)
 # add_compile_definitions(WOLFMQTT_V5)
